@@ -90,7 +90,6 @@ extern Tcl_ObjCmdProc
     NsTclCryptObjCmd,
     NsTclDeleteCookieObjCmd,
     NsTclDummyObjCmd,
-    NsTclTlsObjCmd,
     NsTclEnvObjCmd,
     NsTclFTruncateObjCmd,
     NsTclGetAddrObjCmd,
@@ -265,7 +264,6 @@ static Cmd basicCmds[] = {
     {"ns_cancel", NULL, NsTclCancelObjCmd},
     {"ns_charsets", NsTclCharsetsCmd, NULL},
     {"ns_cleanup", NULL, NsTclDummyObjCmd},
-    {"ns_tls", NULL, NsTclTlsObjCmd},
     {"ns_config", NsTclConfigCmd, NULL},
     {"ns_configsection", NsTclConfigSectionCmd, NULL},
     {"ns_configsections", NsTclConfigSectionsCmd, NULL},
