@@ -1,3 +1,8 @@
+2006-04-18  Vlad Seryakov  <seryakov@users.sf.net>
+
+	nsd/tclinit.c:
+	nsd/tclcmds.c: Remove ns_tls implementation
+
 2006-04-18  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* tests/ns_schedule.test: Add a couple of tests for scheduled
